--- a/source/layouts/example.erb
+++ b/source/layouts/example.erb
@@ -2,11 +2,11 @@
   <%= partial "partials/global_navigation" %>
 
   <div class="body-content-container wrap-container">
-    <nav class="sidebar" data-waypoint="sidebar">
+    <nav class="sidebar">
       <%= partial 'partials/sites_built_with_nav' %>
     </nav>
 
-    <main class="main" role="main" data-waypoint="main">
+    <main class="main" role="main">
       <%= yield %>
     </main>
   </div>
