--- a/source/partials/_documentation_nav.erb
+++ b/source/partials/_documentation_nav.erb
@@ -1,5 +1,7 @@
-<div class="toc-block-container">
-  <div class="toc-block">
+<!-- <div class="toc-block-container"> -->
+  <!-- <div class="toc-block"> -->
+<div>
+  <div>
     <h3 class="docs-section-heading"><%= t("navigation.basics.title") %></h3>
     <ul>
       <li class="doc-item">
@@ -86,7 +88,7 @@
     </ul>
   </div>
 
-  <div class="toc-block">
+  <!-- <div class="toc-block">
     <h3 class="docs-section-heading"><%= t("navigation.community.title") %></h3>
     <ul>
       <li class="doc-item">
@@ -108,5 +110,5 @@
         <%= active_link_to t("navigation.community.built_using_middleman"), "#{locale_prefix}/community/built-using-middleman/" %>
         </li>
     </ul>
-  </div>
+  </div> -->
 </div>
