--- a/source/partials/_global_navigation.erb
+++ b/source/partials/_global_navigation.erb
@@ -1,4 +1,4 @@
-<nav class="c-global-navigation u-flex u-flex-justify-space-between">
+<nav class="c-frame__header c-global-navigation u-flex u-flex-align-items-center u-flex-justify-space-between">
   <%= link_to(
     "Middleman",
     "#{locale_prefix}/",
