--- a/source/layouts/article.erb
+++ b/source/layouts/article.erb
@@ -1,17 +1,17 @@
 <% wrap_layout :layout do %>
   <%= partial "partials/global_navigation" %>
-
+<!--
   <div class="search">
     <%= partial "partials/docsearch" %>
   </div>
-
-  <div class="body-content-container wrap-container" role="main">
-    <nav id="toc" class="sidebar" data-waypoint="sidebar">
-      <%= partial 'partials/documentation_nav' %>
+ -->
+  <main id="main" class="c-frame__body c-container" role="main">
+    <nav class="foo">
+      <%= partial "partials/documentation_nav" %>
     </nav>
 
-    <main class="main" role="main" data-waypoint="main">
+    <div class="bar js-anchor-links">
       <%= yield %>
-    </main>
-  </div>
+    </div>
+  </main>
 <% end %>
