--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,8 +8,10 @@
     <%= stylesheet_link_tag "site" %>
   </head>
   <body>
-    <%= yield %>
-    <%= partial "partials/site_footer" %>
+    <div class="c-frame">
+      <%= yield %>
+      <%= partial "partials/site_footer" %>
+    </div>
     <%= javascript_include_tag :site %>
     <%= partial "partials/tracking" %>
   </body>
