--- a/source/stylesheets/modules/_layout.scss
+++ b/source/stylesheets/modules/_layout.scss
@@ -41,17 +41,17 @@
 
 .main {
 
-  @include media($medium-screen-up) {
-    padding-left: $medium-sidebar-width + 3em;
-  }
+  // @include media($medium-screen-up) {
+  //   padding-left: $medium-sidebar-width + 3em;
+  // }
 
-  @include media($large-screen-up) {
-    padding-left: $large-sidebar-width + 3em;
-  }
+  // @include media($large-screen-up) {
+  //   padding-left: $large-sidebar-width + 3em;
+  // }
 
-  @include media($larger-screen-up) {
-    padding-left: $larger-sidebar-width + 3em;
-  }
+  // @include media($larger-screen-up) {
+  //   padding-left: $larger-sidebar-width + 3em;
+  // }
 
   h1 {
     margin-top: 0.15em;
