--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -15,3 +15,55 @@
 @import "components/site-footer";
 
 @import "utilities/flex";
+
+.c-frame {
+  align-items: stretch;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  width: 100%;
+}
+
+.c-frame__header,
+.c-frame__footer {
+  flex-grow: 0;
+}
+
+.c-frame__header {
+  height: 4rem;
+}
+
+.c-frame__body {
+  flex-grow: 1;
+
+  // height: calc(100vh - 4rem);
+  // overflow: hidden;
+
+  @include clearfix;
+}
+
+
+.c-container {
+  @include margin(null auto);
+  // @include padding();
+  max-width: 1000px;
+}
+
+
+
+.foo {
+  float: left;
+  width: 23%;
+  margin-right: 4%;
+
+  // height: 100%;
+  // overflow: auto;
+}
+
+.bar {
+  float: left;
+  width: 73%;
+
+  // height: 100%;
+  // overflow: auto;
+}
