--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -3,16 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <title><%= page_title %></title>
     <%= stylesheet_link_tag "site" %>
   </head>
   <body>
     <div class="c-frame">
+      <%= partial "partials/global_navigation" %>
       <%= yield %>
       <%= partial "partials/site_footer" %>
     </div>
-    <%= javascript_include_tag :site %>
+    <%= javascript_include_tag "site" %>
     <%= partial "partials/tracking" %>
   </body>
 </html>
