--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -45,7 +45,7 @@
 
 .c-container {
   @include margin(null auto);
-  // @include padding();
+  @include padding(null 1rem);
   max-width: 1000px;
 }
 
