--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -16,7 +16,7 @@
   </section>
 </header>
 
-<div class="wrap-container" role="main">
+<div class="wrap-container">
   <section class="introduction">
     <div class="introduction-container">
       <div class="introduction-item second-graphic">
