--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -11,59 +11,9 @@
 @import "mixins/button";
 @import "modules/modules";
 
-@import "components/global-navigation";
+@import "components/container";
 @import "components/site-footer";
+@import "components/site-frame";
+@import "components/site-navigation";
 
 @import "utilities/flex";
-
-.c-frame {
-  align-items: stretch;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  width: 100%;
-}
-
-.c-frame__header,
-.c-frame__footer {
-  flex-grow: 0;
-}
-
-.c-frame__header {
-  height: 4rem;
-}
-
-.c-frame__body {
-  flex-grow: 1;
-
-  // height: calc(100vh - 4rem);
-  // overflow: hidden;
-
-  @include clearfix;
-}
-
-
-.c-container {
-  @include margin(null auto);
-  @include padding(null 1rem);
-  max-width: 1000px;
-}
-
-
-
-.foo {
-  float: left;
-  width: 23%;
-  margin-right: 4%;
-
-  // height: 100%;
-  // overflow: auto;
-}
-
-.bar {
-  float: left;
-  width: 73%;
-
-  // height: 100%;
-  // overflow: auto;
-}
