--- a/source/localizable/community/built-using-middleman.html.erb
+++ b/source/localizable/community/built-using-middleman.html.erb
@@ -2,7 +2,7 @@
 title: Sites Built Using Middleman
 ---
 
-<div class="c-container">
+<div class="wrap-container">
   <p>These are sites that are built using Middleman.</p>
   <p>
     <%= link_to(
